# code-challenge-globant

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.env.yml  docker-compose.yml  example.env  pyproject.toml
data/: depts_dump.py  jobs_dump.py
docs/: postman_collection.json  postman_colletion.json
init/: init_db.sql
src/: app.py  config.py
src/database/: db.py
src/models/: department.py  hired_employees.py  jobs.py
src/routes/: aggregations.py  department.py  hired_employees.py  jobs.py
src/static/: index.html
src/utils/: bulk.py  csv_loader.py  update.py
